tests/snapshots/protocol_golden__golden_event_delta.snap
---
source: tests/protocol_golden.rs
expression: "serde_json::to_value(&env).unwrap()"
---
{
  "event": {
    "text": "Hello, world!",
    "ts": "2025-01-15T12:00:00Z",
    "type": "assistant_delta"
  },
  "ref_id": "00000000-0000-4000-8000-000000000001",
  "t": "event"
}
