tests/snapshots/protocol_golden__golden_event_tool_call.snap
---
source: tests/protocol_golden.rs
expression: "serde_json::to_value(&env).unwrap()"
---
{
  "event": {
    "input": {
      "content": "fn main() {}",
      "path": "src/main.rs"
    },
    "parent_tool_use_id": null,
    "tool_name": "write_file",
    "tool_use_id": "tu_001",
    "ts": "2025-01-15T12:00:00Z",
    "type": "tool_call"
  },
  "ref_id": "00000000-0000-4000-8000-000000000001",
  "t": "event"
}
