tests/snapshots/protocol_golden__golden_event_tool_result.snap
---
source: tests/protocol_golden.rs
expression: "serde_json::to_value(&env).unwrap()"
---
{
  "event": {
    "is_error": false,
    "output": "fn main() {}",
    "tool_name": "read_file",
    "tool_use_id": "tu_001",
    "ts": "2025-01-15T12:00:00Z",
    "type": "tool_result"
  },
  "ref_id": "00000000-0000-4000-8000-000000000001",
  "t": "event"
}
