tests/snapshots/protocol_golden__golden_fatal_with_ref.snap
---
source: tests/protocol_golden.rs
expression: "serde_json::to_value(&env).unwrap()"
---
{
  "error": "out of memory",
  "ref_id": "00000000-0000-4000-8000-000000000001",
  "t": "fatal"
}
