tests/snapshots/protocol_golden__golden_fatal_without_ref.snap
---
source: tests/protocol_golden.rs
expression: "serde_json::to_value(&env).unwrap()"
---
{
  "error": "missing API key",
  "ref_id": null,
  "t": "fatal"
}
