tests/snapshots/protocol_golden__golden_final.snap
---
source: tests/protocol_golden.rs
expression: "serde_json::to_value(&env).unwrap()"
---
{
  "receipt": {
    "artifacts": [
      {
        "kind": "file",
        "path": "output.txt"
      }
    ],
    "backend": {
      "adapter_version": "0.1.0",
      "backend_version": "1.0.0",
      "id": "sidecar:test"
    },
    "capabilities": {
      "streaming": "native",
      "tool_use": "native"
    },
    "meta": {
      "contract_version": "abp/v0.1",
      "duration_ms": 1234,
      "finished_at": "2025-01-15T12:00:00Z",
      "run_id": "00000000-0000-4000-8000-000000000001",
      "started_at": "2025-01-15T12:00:00Z",
      "work_order_id": "00000000-0000-4000-8000-000000000002"
    },
    "mode": "mapped",
    "outcome": "complete",
    "receipt_sha256": null,
    "trace": [
      {
        "message": "starting",
        "ts": "2025-01-15T12:00:00Z",
        "type": "run_started"
      }
    ],
    "usage": {
      "cache_read_tokens": null,
      "cache_write_tokens": null,
      "estimated_cost_usd": 0.001,
      "input_tokens": 100,
      "output_tokens": 50,
      "request_units": null
    },
    "usage_raw": {
      "input_tokens": 100,
      "output_tokens": 50
    },
    "verification": {
      "git_diff": "diff --git a/file.txt",
      "git_status": "M file.txt",
      "harness_ok": true
    }
  },
  "ref_id": "00000000-0000-4000-8000-000000000001",
  "t": "final"
}
